# SchizoNegSympAI

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
assets/: labels.csv  requirements.txt
src/: config.yaml
src/core/: config.py  eval.py  file_utils.py  log.py
src/ensemble/estimator/: data_handler.py  inference.py  train.py  trainer.py
src/ensemble/feature_extractor/: encoder.py  holistic_tracking.py  spkr_diarization.py
src/llm/: constants.py  estimator.py  transcriber.py
src/llm/prompt/: C1-9.txt  template.txt
