[project]
name = "schizo-neg-symp-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Yi-Hsuan Chan",email = "marty@cmdm.csie.ntu.edu.tw"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "torch (==2.1.0)",
    "torchaudio (==2.1.0)",
    "nemo-toolkit[asr] (==2.0.0)",
    "python-dotenv (==1.1.0)",
    "mediapipe (==0.10.5)",
    "openai-whisper (==20240930)",
    "scikit-learn (==1.4.0)",
    "imbalanced-learn (==0.12.0)",
    "pingouin (==0.5.4)",
    "langchain (==0.1.16)",
    "langchain-anthropic (==0.1.11)",
    "langchain-google-genai (==1.0.2)",
    "langchain-openai (==0.1.3)",
    "numpy (==1.26.4)",
    "setuptools (<81)",
    "ruff (>=0.12.9,<0.13.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch"}
torchaudio = {source = "pytorch"}
